@@ -1,5 +1,5 @@
 /*
-    Copyright 2009-2010, Felspar Co Ltd. http://fost.3.felspar.com/
+    Copyright 2009-2011, Felspar Co Ltd. http://support.felspar.com/
     Distributed under the Boost Software License, Version 1.0.
     See accompanying file LICENSE_1_0.txt or copy at
         http://www.boost.org/LICENSE_1_0.txt
@@ -94,7 +94,7 @@ void fostlib::python::inproc_host::operator () (
     boost::python::list args, boost::python::dict kwargs
 ) {
     try {
-        boost::python::str filename( fostlib::coerce< fostlib::string >( f.string() ) );
+        boost::python::str filename( fostlib::coerce< fostlib::string >( f ) );
         boost::python::exec_file(filename, g_host->main_namespace, g_host->main_namespace);
 
         // Find main and call it through a lambda to handle the arguments for us
