@@ -1,3 +1,6 @@
+2011-07-28  Kirit Saelensminde  <kirit@felspar.com>
+ Boost 1.46.0 is now properly supported.
+
 2010-06-09  Kirit Saelensminde  <kirit@felspar.com>
  User agent
  - The request data can now be retrieved from the request object.
